[package]
name = "mb108"
version = "0.1.0"
edition = "2021"

[build-dependencies.mb108-sys]
path = "mb108-sys"
version = "^0.1.0"
features = ["enable_report"]

[dependencies.mb108-sys]
path = "mb108-sys"
version = "^0.1.0"

[dependencies.mb108-main]
path = "mb108-main"
version = "^0.1.0"

[dependencies]
lazy_static = "^1.5.0"
log = { version = "^0.4" }
tokio = { version = "^1.39", features = ["full"] }

[features]
default = []
